# Dhan_CopyTrader

./: .gitignore  .replit  Dhan_CopyTrader.py  LICENSE  README.md  app.py  dhan_config_template.json  dhan_encrypt_utility.py  dhan_requirements.txt  pyproject.toml  replit.md
core/: dhan_trader.py  encryption.py
static/css/: style.css
static/js/: app.js
streamlit-app/: requirements.txt
streamlit-app/src/: app.py
streamlit-app/src/components/: __init__.py  sidebar.py
streamlit-app/src/pages/: dashboard.py  home.py  sidebar.py
streamlit-app/src/utils/: dhan_helper.py
templates/: accounts.html  base.html  dashboard.html  login.html  settings.html  trading.html
